# iss-tracker

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  convert_data.py  debug_colors.py  debug_kernels.py  generate_frames.py  inspect_pm.py  pyproject.toml  requirements.txt  setup_kernels.py  start.sh  stop.sh  test_colors.py  theme.toml
deploy/: iss-display.service  iss-display.timer
docs/: pi-zero-setup.md
scripts/: diagnose_epaper.py
src/e-paper-driver/: README.md  demo.py  epd2in13b_V4.py  requirements.txt  tri_color_image.py
src/iss_display/: __init__.py  config.py  theme.py
src/iss_display.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/iss_display/app/: __init__.py  main.py  scheduler.py
src/iss_display/data/: __init__.py  astros_client.py  geography.py  iss_client.py  mapbox_client.py  world_110m.py
src/iss_display/display/: __init__.py  epaper_driver.py  lcd_driver.py  led.py
src/iss_display/pipeline/: __init__.py  image_preprocessor.py  layout.py
systemd/: iss-display.service
tests/: test_encoder.py  test_geography.py  test_groundtrack_descriptions.py  test_image_preprocessor.py  test_layout.py  test_led_controller.py  test_mapbox_cache.py  test_threshold.py  test_tuned_thresholds.py
