[project]
name = "iss-display"
version = "0.1.0"
description = "Self-contained ISS tracker for GeeekPi 2.13 inch e-paper"
authors = [{name = "ISS Display Maintainers"}]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "gpiozero>=2.0",
    "spidev>=3.6"
]

[project.scripts]
iss-display = "iss_display.app.main:main"

dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
