[project]
name = "iss-display"
version = "0.1.0"
description = "Self-contained ISS tracker with 3D globe on 3.5 inch TFT LCD"
authors = [{name = "ISS Display Maintainers"}]
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.0.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "cartopy>=0.22.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0",
    "spidev>=3.6",
    "RPi.GPIO>=0.7.1"
]

dynamic = ["readme"]

[project.scripts]
iss-display = "iss_display.app.main:main"

[tool.setuptools.dynamic]
readme = { file = "README.md" }

[build-system]
requires = ["setuptools>=62.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
